--- a/index.html
+++ b/index.html
@@ -8,29 +8,28 @@
   </head>
   <body>
     <div class="calculator">
-      <div class="result">
-
-      </div>
+      <div class="result"></div>
+      <div class="clearButton">C</div>
       <div class="keys">
-        <span>7</span>
-        <span>8</span>
-        <span>9</span>
-        <span>/</span>
+        <span class="button">7</span>
+        <span class="button">8</span>
+        <span class="button">9</span>
+        <span class="button">/</span>
 
-        <span>4</span>
-        <span>5</span>
-        <span>6</span>
-        <span>X</span>
+        <span class="button">4</span>
+        <span class="button">5</span>
+        <span class="button">6</span>
+        <span class="button">X</span>
 
-        <span>1</span>
-        <span>2</span>
-        <span>3</span>
-        <span>-</span>
+        <span class="button">1</span>
+        <span class="button">2</span>
+        <span class="button">3</span>
+        <span class="button">-</span>
 
-        <span>0</span>
-        <span>.</span>
-        <span>=</span>
-        <span>+</span>
+        <span class="button">0</span>
+        <span class="button">.</span>
+        <span class="button">=</span>
+        <span class="button">+</span>
       </div>
     </div>
   </body>
