--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@
   <body>
     <div class="calculator">
       <div class="result"></div>
-      <div class="clearButton">C</div>
+      <div class="clear">C</div>
       <div class="keys">
         <span class="button">7</span>
         <span class="button">8</span>
         <span class="button">9</span>
-        <span class="button">/</span>
+        <span class="button operator">/</span>
 
         <span class="button">4</span>
         <span class="button">5</span>
         <span class="button">6</span>
-        <span class="button">X</span>
+        <span class="button operator">x</span>
 
         <span class="button">1</span>
         <span class="button">2</span>
         <span class="button">3</span>
-        <span class="button">-</span>
+        <span class="button operator">-</span>
 
         <span class="button">0</span>
         <span class="button">.</span>
         <span class="button">=</span>
-        <span class="button">+</span>
+        <span class="button operator">+</span>
       </div>
     </div>
   </body>
