finished loops to make working calculator.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span class="button">4</span>
         <span class="button">5</span>
         <span class="button">6</span>
-        <span class="button operator">x</span>
+        <span class="button operator">*</span>
 
         <span class="button">1</span>
         <span class="button">2</span>
